Bug 113367 - attribute transform in draw:frame has wrong namespace, is svg, has to be draw
Summary: attribute transform in draw:frame has wrong namespace, is svg, has to be draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-22 22:37 UTC by Regina Henschel
Modified: 2017-10-30 10:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
image with 30deg rotation (18.60 KB, application/vnd.oasis.opendocument.text)
2017-10-22 22:37 UTC, Regina Henschel
Details
Patch to solve the wrong namespace (1.39 KB, patch)
2017-10-26 11:55 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-10-22 22:37:54 UTC
Created attachment 137217 [details]
image with 30deg rotation

Open attached document. The image is rotated by 30deg. (Nice work!)

Open the file it was generated with Version: 6.0.0.0.alpha1+
Build ID: dc2d133e7953f08f73ef9cd0b40786764b0e2035
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-22_01:16:45
Locale: de-DE (de_DE); Calc: group.

You will find the attribute svg:transform="rotate(300)" in element <draw:frame>. The namespace svg: is wrong for ODF1.2 it has to be namespace draw:

http://docs.oasis-open.org/office/v1.2/os/OpenDocument-v1.2-os-part1.html#element-draw_frame
Comment 1 Regina Henschel 2017-10-26 11:55:28 UTC
Created attachment 137301 [details]
Patch to solve the wrong namespace

The attached patch shows, where the problem is.

That wrong namespace has been there from the beginning in 2004. So the question is, whether documents exists, where this part of the export has been used.

I was not able to trigger it with something. Only Armins rotate image now uses this part.
Comment 2 Regina Henschel 2017-10-26 13:57:19 UTC
Patch is in https://gerrit.libreoffice.org/#/c/43890/ now. But Jenkins seems to very busy and has not started review.
Comment 3 Armin Le Grand (collabora) 2017-10-27 08:03:05 UTC
No docs should exist, the former 90/180/270 rotation 'executed' the rot on the graphic (if possible, three types were supported) and forgot about it (not model data), so never was written. Interestingly, read/write was in the im/export all the time (so I had not to add it newly).
Thanks for looking at the namespace and adapting it! BTW: What would be allowed there, would a full 'transform' with matrix notation be possible...? Just being curious
Comment 4 Commit Notification 2017-10-28 02:07:48 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7cebfbeabb24f908fb586ef5fa47f103042d769c

tdf#113367 Change namespace from svg to draw for attr transform

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2017-10-28 15:42:27 UTC
(In reply to Armin Le Grand (CIB) from comment #3)
 BTW: What would be
> allowed there, would a full 'transform' with matrix notation be possible...?

There is no difference in the shapes for attribute draw:transform in file format. The meaning is always the same. "matrix" notation would be possible.
Comment 6 Regina Henschel 2017-10-30 10:34:07 UTC
Seen OK in Version: 6.0.0.0.alpha1+
Build ID: d30522e46ca884e9bc74af21711d9537e8118859
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-29_23:13:14
Locale: de-DE (de_DE); Calc: group