tdf#113367 Change namespace from svg to draw for attr transform

The new feature of rotating images in Writer first time triggers the
export of the attribute transform. So now it becomes visible, that
it has the wrong namespace, see ODF 19.228 part 1.

Change-Id: I00d5e6a12bd564e814679e8be862c7d08baae956
Reviewed-on: https://gerrit.libreoffice.org/43890
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>